--- a/spring-aws-sqs/src/main/resources/application.properties
+++ b/spring-aws-sqs/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 server.port=9122
 spring.application.name=spring-aws-sqs
 
-cloud.aws.credentials.access-key=AKIAZH22AFPG65PVHANY
-cloud.aws.credentials.secret-key=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
+cloud.aws.credentials.access-key=key
+cloud.aws.credentials.secret-key=secret
 
 cloud.aws.region.static=us-east-2
 cloud.aws.region.auto=false
 cloud.aws.stack.auto=false
-cloud.aws.endpoint=https://sqs.us-east-2.amazonaws.com/635307043789/ibm-queue
+cloud.aws.endpoint=endpoint
