--- a/spring-aws-sns/src/main/resources/application.properties
+++ b/spring-aws-sns/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8100
 spring.application.name=spring-aws-sns
-cloud.aws.credentials.access-key=AKIA4UAZGJ5A75536F4Y
-cloud.aws.credentials.secret-key=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
+cloud.aws.credentials.access-key=accesskey
+cloud.aws.credentials.secret-key=secret
 cloud.aws.region.static=us-west-2
 cloud.aws.region.auto=false
-cloud.aws.sns.topic-arn=arn:aws:sns:us-west-2:867636236097:sample-sns-ibm
+cloud.aws.sns.topic-arn=arn
