--- a/eureka-hello-client/src/main/resources/application.properties
+++ b/eureka-hello-client/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=9001
-spring.application.name= ibm-hello-client
+server.port=6161
+spring.application.name= hello-client
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 management.endpoints.web.exposure.include=*
-hello.service.endpoint=http://ibm-hello-service/message
+hello.service.endpoint=hello-service
+#hello.service.endpoint=http://localhost:8111/message
