--- a/eureka-hello-service/src/main/resources/application.properties
+++ b/eureka-hello-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8111
-spring.application.name= ibm-hello-service
+spring.application.name= hello-service
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 management.endpoints.web.exposure.include=*
