using ssl amqps

--- a/spring-rabbitmq/src/main/resources/application.properties
+++ b/spring-rabbitmq/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 
 server.port=5001
 spring.application.name=spring-rabbitmq
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
+spring.rabbitmq.addresses=amqps://b-9cb46e4a-9d2e-4583-b085-e2ea5284be12.mq.us-east-2.amazonaws.com:5671
+#spring.rabbitmq.host=amqps://b-9cb46e4a-9d2e-4583-b085-e2ea5284be12.mq.us-east-2.amazonaws.com
+#spring.rabbitmq.port=5671
 # not needed incase using the default user
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin@123456
 rabbitmq.exchange=com.mohsinkd786.exchange
 rabbitmq.queue=mohsinkd786.queue
 rabbitmq.routing-key=mohsinkd786.routingkey
